--- a/swri_dbw_interface/package.xml
+++ b/swri_dbw_interface/package.xml
@@ -8,7 +8,7 @@
   </description>
 
   <author>Elliot Johnson</author>
-  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
+  <maintainer email="malban@swri.org">Marc Alban</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
 
