--- a/swri_prefix_tools/package.xml
+++ b/swri_prefix_tools/package.xml
@@ -8,7 +8,7 @@
 
   </description>
   <author>Elliot Johnson</author>
-  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
+  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
   
