--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -7,7 +7,7 @@
      swri_roscpp
 
   </description>
-  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
+  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>diagnostic_updater</depend>
