--- a/swri_rospy/package.xml
+++ b/swri_rospy/package.xml
@@ -6,7 +6,7 @@
   This package provides added functionaliy on top of rospy, including a
   single-threaded callback queue.
   </description>
-  <maintainer email="evenator@swri.edu">Ed Venator</maintainer>
+  <maintainer email="preed@swri.edu">P. J. Reed</maintainer>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>rospy</exec_depend>
