--- a/swri_route_util/package.xml
+++ b/swri_route_util/package.xml
@@ -8,7 +8,7 @@
     navigation messages defined in marti_nav_msgs.
   </description>
 
-  <maintainer email="elliot.johnson@swri.org">Elliot Johnson</maintainer>
+  <maintainer email="malban@swri.org">Marc Alban</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
