--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -11,6 +11,7 @@
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>diagnostic_updater</depend>
+  <depend>dynamic_reconfigure</depend>
   <test_depend>gtest</test_depend>
   <depend>marti_common_msgs</depend>
   <depend>nav_msgs</depend>
