--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: required
-dist: trusty
+dist: xenial
 language: generic
 
 notifications:
@@ -7,29 +7,35 @@ notifications:
     on_success: always
     on_failure: always
 
-install: git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
-script: source .ci_config/travis.sh
+cache:
+  directories:
+    - $HOME/.ccache
 
-jobs:
+env:
+  global:
+    - ROS_REPO=ros
+    - CCACHE_DIR=$HOME/.ccache
+  matrix:
+    - ROS_DISTRO="kinetic" ROS_REPO="ros-shadow-fixed"
+    - ROS_DISTRO="kinetic"
+    - ROS_DISTRO="lunar" ROS_REPO="ros-shadow-fixed"
+    - ROS_DISTRO="lunar"
+    - ROS_DISTRO="melodic" ROS_REPO="ros-shadow-fixed"
+    - ROS_DISTRO="melodic"
+
+matrix:
   include:
-    - stage: build-shadow-fixed
-      env: ROS_DISTRO="indigo" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
-    - env: ROS_DISTRO="kinetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
-    - env: ROS_DISTRO="lunar" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
-    - env: ROS_DISTRO="melodic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros-shadow-fixed/ubuntu
-    - stage: build-released
-      env: ROS_DISTRO="indigo" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - env: ROS_DISTRO="kinetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - env: ROS_DISTRO="lunar" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - env: ROS_DISTRO="melodic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - stage: lint
-      sudo: false
-      install: pip install --user -q catkin-lint
+    - sudo: false
+      language: python
+      python: 3.7
+      install: pip install -q catkin-lint rosdep
       script: catkin_lint -W2 --explain .
       env: JOB="catkin_lint"
   allow_failures:
-    - env: ROS_DISTRO="indigo" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - env: ROS_DISTRO="kinetic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - env: ROS_DISTRO="lunar" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
-    - env: ROS_DISTRO="melodic" ROS_REPOSITORY_PATH=http://packages.ros.org/ros/ubuntu
+    - env: ROS_DISTRO="kinetic"
+    - env: ROS_DISTRO="lunar"
+    - env: ROS_DISTRO="melodic"
     - env: JOB="catkin_lint"
+
+install: git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
+script: source .ci_config/travis.sh
