--- a/swri_math_util/package.xml
+++ b/swri_math_util/package.xml
@@ -15,6 +15,8 @@
   
   <depend>rclcpp</depend>
 
+  <test_depend>ament_cmake_gtest</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
