--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -24,6 +24,8 @@
   <depend>rclcpp</depend>
   <depend>tf2</depend>
 
+  <test_depend>ament_cmake_gtest</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
