--- a/swri_system_util/package.xml
+++ b/swri_system_util/package.xml
@@ -15,6 +15,9 @@
   
   <depend>rclcpp</depend>
 
+  <test_depend>ament_cmake_gest</test_depend>
+  <test_depend>ament_index_cpp</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
