--- a/swri_system_util/package.xml
+++ b/swri_system_util/package.xml
@@ -15,7 +15,7 @@
   
   <depend>rclcpp</depend>
 
-  <test_depend>ament_cmake_gest</test_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_index_cpp</test_depend>
 
   <export>
