--- a/swri_system_util/CMakeLists.txt
+++ b/swri_system_util/CMakeLists.txt
@@ -25,8 +25,9 @@ if(BUILD_TESTING)
 
   include_directories(${ament_index_cpp_INCLUDE_DIRS})
   ament_add_gtest(test_file_util test/test_file_util.cpp)
-  ament_target_dependencies(test_file_util ament_index_cpp)
-  target_link_libraries(test_file_util ${PROJECT_NAME})
+  target_link_libraries(test_file_util
+    ament_index_cpp::ament_index_cpp
+    ${PROJECT_NAME})
 endif()
 
 install(DIRECTORY include/
