--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -58,18 +58,17 @@ add_library(${PROJECT_NAME} SHARED
   src/tf2_util.cpp
   src/utm_transformer.cpp
   src/wgs84_transformer.cpp)
+
 target_include_directories(${PROJECT_NAME}
   PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
-target_include_directories(${PROJECT_NAME}
-  SYSTEM
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    ${swri_math_util_INCLUDE_DIRS}
+    ${tf2_geometry_msgs_INCLUDE_DIRS}
   INTERFACE
-  ${PROJ_INCLUDE_DIRS}
+    ${PROJ_INCLUDE_DIRS}
 )
-set_property(TARGET ${PROJECT_NAME}
-  PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 target_compile_definitions(${PROJECT_NAME}
   PUBLIC
     USE_NEW_TF2_TOMSG=${USE_NEW_TF2_TOMSG}
@@ -77,32 +76,29 @@ target_compile_definitions(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME}
   PUBLIC
-  Boost::boost
-  Boost::filesystem
-  Boost::thread
-  ${GeographicLib_LIBRARIES}
-  opencv_calib3d
-  opencv_core
-  opencv_highgui
-  opencv_imgproc
-  opencv_video
-  ${PROJ_LIBRARIES}
-  yaml-cpp
-)
-ament_target_dependencies(${PROJECT_NAME}
-  PUBLIC
-  diagnostic_msgs
-  diagnostic_updater
-  geographic_msgs
-  geometry_msgs
-  gps_msgs
-  rclcpp
-  sensor_msgs
-  swri_math_util
-  swri_roscpp
-  tf2
-  tf2_geometry_msgs
-  tf2_ros
+    Boost::boost
+    Boost::filesystem
+    Boost::thread
+    ${diagnostic_msgs_LIBRARIES}
+    ${diagnostic_updater_LIBRARIES}
+    ${GeographicLib_LIBRARIES}
+    ${geographic_msgs_LIBRARIES}
+    ${geometry_msgs_LIBRARIES}
+    ${gps_msgs_LIBRARIES}
+    opencv_calib3d
+    opencv_core
+    opencv_highgui
+    opencv_imgproc
+    opencv_video
+    ${PROJ_LIBRARIES}
+    rclcpp::rclcpp
+    ${sensor_msgs_LIBRARIES}
+    ${swri_math_util_LIBRARIES}
+    ${swri_roscpp_LIBRARIES}
+    tf2::tf2
+    ${tf2_geometry_msgs_LIBRARIES}
+    tf2_ros::tf2_ros
+    yaml-cpp
 )
 
 add_library(${PROJECT_NAME}_nodes SHARED
@@ -115,43 +111,39 @@ target_include_directories(${PROJECT_NAME}_nodes
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
 )
+
 target_include_directories(${PROJECT_NAME}_nodes
   SYSTEM
   INTERFACE
-  ${PROJ_INCLUDE_DIRS}
-)
+  ${PROJ_INCLUDE_DIRS})
 
 target_compile_definitions(${PROJECT_NAME}
-  PUBLIC "${TF_UTIL_DEFINITIONS}"
-  )
+  PUBLIC "${TF_UTIL_DEFINITIONS}")
+
 target_compile_definitions(${PROJECT_NAME}_nodes
-  PRIVATE "${TF_UTIL_DEFINITIONS}"
-  )
+  PRIVATE "${TF_UTIL_DEFINITIONS}")
 
 target_compile_definitions(${PROJECT_NAME}_nodes
   PRIVATE "COMPOSITION_BUILDING_DLL")
+
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_transform_util::DynamicTransformPublisher")
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_transform_util::GpsTransformPublisher")
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_transform_util::ObstacleTransformer")
-target_link_libraries(${PROJECT_NAME}_nodes ${PROJECT_NAME})
-ament_target_dependencies(${PROJECT_NAME}_nodes
-  marti_nav_msgs
-  rcl_interfaces
-  swri_roscpp
-  rclcpp_components
-)
+target_link_libraries(${PROJECT_NAME}_nodes PUBLIC
+  ${PROJECT_NAME}
+  ${marti_nav_msgs_LIBRARIES}
+  rcl_interfaces::rcl_interfaces
+  ${swri_roscpp_LIBRARIES}
+  rclcpp_components::rclcpp_components)
 
 add_executable(lat_lon_tf_echo src/nodes/lat_lon_tf_echo.cpp)
 target_include_directories(lat_lon_tf_echo
   PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
-target_include_directories(lat_lon_tf_echo
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
   SYSTEM
   INTERFACE
-  ${PROJ_INCLUDE_DIRS}
-)
+  ${PROJ_INCLUDE_DIRS})
 
 target_link_libraries(lat_lon_tf_echo ${PROJECT_NAME})
 
@@ -163,24 +155,34 @@ if(BUILD_TESTING)
   target_include_directories(transform_manager_test PRIVATE
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
   )
-  target_link_libraries(transform_manager_test ${PROJECT_NAME})
-  ament_target_dependencies(transform_manager_test rclcpp tf2 tf2_ros)
+  target_link_libraries(transform_manager_test PUBLIC
+    ${PROJECT_NAME}
+    rclcpp::rclcpp
+    tf2::tf2
+    tf2_ros::tf2_ros)
 
   ament_add_gtest(local_xy_util_test test/test_local_xy_util.cpp)
-  target_link_libraries(local_xy_util_test ${PROJECT_NAME})
-  ament_target_dependencies(local_xy_util_test rclcpp)
+  target_link_libraries(local_xy_util_test PUBLIC
+    ${PROJECT_NAME}
+    rclcpp::rclcpp)
 
   ament_add_gtest(utm_util_test test/test_utm_util.cpp)
-  target_link_libraries(utm_util_test ${PROJECT_NAME})
-  ament_target_dependencies(utm_util_test rclcpp)
+  target_link_libraries(utm_util_test PUBLIC
+    ${PROJECT_NAME}
+    rclcpp::rclcpp)
 
   ament_add_gtest(georeference_test test/test_georeference.cpp)
-  target_link_libraries(georeference_test ${PROJECT_NAME})
-  ament_target_dependencies(georeference_test rclcpp tf2 ament_index_cpp)
+  target_link_libraries(georeference_test PUBLIC
+    ${PROJECT_NAME}
+    rclcpp::rclcpp
+    tf2::tf2
+    ament_idnex_cpp::ament_index_cpp)
 
   ament_add_gtest(transform_util_test test/test_transform_util.cpp)
-  target_link_libraries(transform_util_test ${PROJECT_NAME})
-  ament_target_dependencies(transform_util_test rclcpp tf2)
+  target_link_libraries(transform_util_test PUBLIC
+    ${PROJECT_NAME}
+    rclcpp::rclcpp
+    tf2::tf2)
 
   add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/launch/transform_manager.test.py)
   add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/launch/local_xy_util.test.py)
