--- a/swri_dbw_interface/CMakeLists.txt
+++ b/swri_dbw_interface/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(swri_dbw_interface)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(ament_cmake REQUIRED)
 
 install(DIRECTORY include/
-  DESTINATION include
-)
+  DESTINATION include)
 
 ament_export_dependencies(ament_cmake)
 
